--- a/public/css/main.css
+++ b/public/css/main.css
@@ -74,6 +74,46 @@ fieldset {
     padding: 0;
 }
 
+body {
+font-family: "Gotham SSm A","Gotham SSm B","Helvetica Neue",Helvetica,Arial,sans-serif;
+font-size: 13px;
+line-height: 1.42857;
+color: #333;
+}
+
+.btn-inverse {
+    color: #FFFFFF;
+    border-width: 1px;
+    border-color: #fff;
+    background-color: #5DD3E3;
+    background-image: none;
+    font-weight: 500;
+    border-radius: 0;
+}
+.btn-inverse-black {
+    color: #FFFFFF;
+    background-color: #666666;
+    background-image: none;
+    font-weight: 500;
+    border-radius: 0;
+}
+.btn-inverse-red {
+    color: #FFFFFF;
+    border-width: 1px;
+    border-color: #fff;
+    background-color: #666666;
+    background-image: none;
+    font-weight: 500;
+    border-radius: 0;
+}
+
+.brand {
+    font-size: 30px;
+    text-transform: uppercase;
+    font-weight: 400;
+    letter-spacing: 10px;
+    font-weight: 200;
+}
 /*
  * Allow only vertical resizing of textareas.
  */
