--- a/public/css/main.css
+++ b/public/css/main.css
@@ -109,9 +109,10 @@ color: #333;
 
 .brand {
     font-size: 30px;
+    font-height: 10px;
     text-transform: uppercase;
     font-weight: 400;
-    letter-spacing: 10px;
+    letter-spacing: 6px;
     font-weight: 200;
 }
 /*
