--- a/public/css/main.css
+++ b/public/css/main.css
@@ -81,6 +81,25 @@ line-height: 1.42857;
 color: #333;
 }
 
+.center
+{
+    margin-left:auto;
+    margin-right:auto;
+    width:70%;
+    background-color:#b0e0e6;
+}
+
+.dropzone {
+    color: grey;
+    background-color: #FFFFFF;
+    background-image: none;
+    width: 250px;
+    height: 40px;
+    line-height: 34px;
+    border-color: grey;
+    border-radius: 0.5;
+    border-style: dashed;
+}
 .btn-inverse {
     color: #FFFFFF;
     border-width: 1px;
@@ -109,11 +128,9 @@ color: #333;
 
 .brand {
     font-size: 30px;
-    font-height: 10px;
     text-transform: uppercase;
-    font-weight: 400;
-    letter-spacing: 6px;
-    font-weight: 200;
+    letter-spacing: 1px;
+    font-weight: 700;
 }
 /*
  * Allow only vertical resizing of textareas.
